--- a/exo-40.css
+++ b/exo-40.css
@@ -5,7 +5,7 @@
 }
 
 html{
-    font-size: 62.5%;
+    font-size: 2.5rem;
 }
 
 body{
@@ -61,7 +61,18 @@ body{
 }
 
 @media screen and (max-width: 350px) {
-    #hide{
+    #container {
+        margin: 0;
+        width: 100%;
+    }
+
+    #div1, #div2, #div3{
+        font-size: 1.5rem;
+        display: block;
+        width: 100%;
+    }
+
+    #hide {
         display: none;
     }
 }
